--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
     
     <!---------- CSS File Link ---------->
-    <link href="/assets/style.css" rel="stylesheet">
-</head>
 
 <!------ Background Image & Header ----------> 
 <body class="background-image">
@@ -29,43 +27,58 @@
         <header id="page-header" class="container-fluid text-center pb-3 pt-3"><h1 class="text-white">Weather Forecast</h1>
     </div>
   </header>
-    
-  <!-------- Search Box --------->
-    <div class="container-fluid row">
-      <div class="justify-content-center left_div pt-3 col-3">
-      <h3 class="text-white pt-2 pl-3">Search by City: </h3>
-      <span class="input-group">
-        <!---- Input Field ---->  
-        <input type="text" name="search" class="form-control mr-sm-2 float-left" placeholder="Search" aria-label="Search" id="search_bar">
-        <!---- Search Button ---->
-        <button id="search-btn" class="btn my-sm-0 ms-1 btn-outline-light my-2" type="submit"><i class="bi bi-search"></i>
-        </button>
-      </span>
-      <div class="border-bottom border-1 border-white ms-1 mt-4"></div>
-    </div>
-
-  <!----- Previous Searched Cities ------->
-    <h3 class="text-white pt-4 pl-3">Recent Searches: </h3>
-    <div id="recent-searches-container" class="container col-12 my-3"></div>
-
-  <!------------ Current Weather -------------->
-    <div class="current-weather pt-3 col-9">
-      <h2 class="justify-content-center p-3 text-white" id="city-name"></h2>
+  
+  <div class="container-fluid">
+    <!-- Start of Side Bar -->
+    <div class="row">
+      <aside id="sidebarMenu" class="col-md-3 d-md-block sidebar">
         <div class="row">
-          <div class="col-6">
-            <p id="current-temp"></p>
-            <p id="current-humidity"></p>
-            <p id="current-wind-speed"></p>
-            <img id="current-icon-div" src="">
+          <div class="col-md-12">
+            <div class="form-group searchBarGroup">
+              <h3 class="text-white pt-2 pl-3">Search by City: </h3>
+              <span class="input-group">
+                <!---- Input Field ---->  
+                <input type="text" name="search" class="form-control mr-sm-2 float-left" placeholder="Search" aria-label="Search" id="search_bar">
+                <!---- Search Button ---->
+                <button id="search-btn" class="btn my-sm-0 ms-1 btn-outline-light my-2" type="submit"><i class="bi bi-search"></i>
+                </button>
+              </span>
+              <div class="border-bottom border-1 border-white ms-1 mt-4"></div>
+            </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12 searchList">
+            <h3 class="text-white pt-4 pl-3">Recent Searches: </h3>
+          </div>
+        </div>
+      </aside>
+    <!-- End of Side Bar -->
+
+    <!-- Start of Main Dashboard -->
+      <main role="main" class="col-md-9">
+        <div class="row">
+          <div class="col-md-12 mainCardCol">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-12 forecastTitle">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 forecastCards">
+            </div>
+          </div>
+        </div>
+      </main>
+    <!-- end of main dashboard -->   
     </div>
+  </div>
 
-
-
-
-
-  <!----- Bootstrap JS Link ------>
+    <!----- Bootstrap JS Link ------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="assets/script.js"></script>
 </body>
