updated html doc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     
     <!---------- CSS File Link ---------->
     <link rel="stylesheet" href="/assets/style.css">
-    
+</head>
+
 <!------ Background Image & Header ----------> 
 <body class="background-image">
   <header>
