updated JS, HTML and CSS for functionality and styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="no-border" class="col-12 col-sm-12 col-md-12 col-lg-3">
         <h3 class="text-white pt-2 pl-3">Search by City: </h3>
         <form id="weather-form">
-          <div class="form-group">
+          <div style="display: flex" class="form-group">
             
             <!---- Input Field ---->  
             <input type="text" name="city-input" class="form-control mr-sm-2 float-left" placeholder="Enter a City..." aria-label="Search" id="city-input">
@@ -47,7 +47,7 @@
           </div>
         </form>
 
-        <!-- buttons to previous searches -->
+        <!---- buttons to previous searches ---->
         <div id="hereThis" class="card">
 
         </div>
@@ -55,7 +55,7 @@
         <button type="clear" id="btnclear" class="btn btn-danger mt-3 w-100">Clear</button>
       </div>
 
-      <!-- main weather in here -->
+      <!---- main weather in here ---->
       <div id="disappear" class="col-12 col-sm-12 col-md-12 col-lg-9 text-center">
         <div class="card mb-3 mt-3 text-white bg-info">
           <div class="card-body">
@@ -65,7 +65,7 @@
           </div>
         </div>
     
-        <!-- 5 day future forecast here -->
+        <!---- 5-Day Future Forecast ---->
         <div class="card-group" id="card-group">
         </div>
       </div>
